--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <main class="main-content">
         <header class="header-banner">
             <h1 class="main-title">Amigo Secreto</h1>
-            <img src="assets/amigo_feliz.jpeg" alt="Imagem representativa de amigo secreto">
+            <img class="figuraamigofeliz" src="assets/amigo_feliz.jpeg" alt="Imagem representativa de amigo secreto">
         </header>
         
         <section class="input-section">
